--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -10,6 +10,7 @@
         <input name="username" id="username" required>
         <label for="password">Password</label>
         <input type="password" name="password" id="password" required>
+        <input type="hidden" name="csrf_token" value="{{ session['csrf_token'] }}">
         <input type="submit" value="Sign Up">
     </form>
 </div>
